Review Request 5777: DP-3598 Errors in Creating Doubles from Textthat looks like a number